--- a/refit-receiver/Dockerfile
+++ b/refit-receiver/Dockerfile
@@ -1,10 +1,13 @@
 FROM ubuntu
 
 RUN apt-get update
-RUN apt-get install -y python3 python3-pip curl
-RUN pip3 install flask jproperties
+RUN apt-get install -y python3 python3-pip curl dnsutils
+RUN apt install dnsutils
+RUN pip3 install flask jproperties requests
 
 COPY receiver.py /refit/receiver.py 
+
+ENV PYTHONUNBUFFERED=1
 
 WORKDIR /refit/
 
